main page ready

--- a/templates/src/assets/sass/base/_variables.sass
+++ b/templates/src/assets/sass/base/_variables.sass
@@ -1,7 +1,6 @@
-$main-font: "MV Boli"
-$side-font: "MV Boli"
+$main-font: "Times New Roman"
 $background: #edecee;
-$side-background: white
+$side-background: black
 $news-border-radius: 15px
 $content-margin: 20px
 $font-size: 21pt
