--- a/templates/src/assets/sass/components/_footer.sass
+++ b/templates/src/assets/sass/components/_footer.sass
@@ -1,7 +1,6 @@
 #footer-root
-    background: #604656
+    background: black
     color: white
-    font-family: $side-font
     width: 100%
 
 .sm-img
