--- a/templates/src/assets/sass/components/_home.sass
+++ b/templates/src/assets/sass/components/_home.sass
@@ -1,9 +1,7 @@
-.home-main
-    font-family: $main-font
-
 #mainDiv
     height: 90vh
-    width: 100vw
+    width: 100vw 
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ),
 
 #make-request-btn
     color: #fff
@@ -17,4 +15,9 @@
 
 #text
     color: $text-color
-    width: 700px
+    width: 750px
+    font-size: 15pt
+
+#title
+    color: $text-color
+    font-size: 35pt
