--- a/templates/src/assets/sass/components/_header.sass
+++ b/templates/src/assets/sass/components/_header.sass
@@ -1,13 +1,13 @@
 header
     font-size: $font-size
-    font-family: $side-font
-    background: $side-background
+    background: black
     height: 10vh
     position: sticky
     top: 0
+    z-index: 1000
     
 a
-    color: #131313
+    color: $text-color
 
 #logo-img
     height: 60px
