--- a/templates/src/assets/sass/index.sass
+++ b/templates/src/assets/sass/index.sass
@@ -6,6 +6,7 @@
 @import 'components/footer'
 @import 'components/home'
 @import 'components/about'
+@import 'components/nomination'
 
 #app
     background: $background
@@ -14,3 +15,7 @@ html
     background: $background
     max-width: 100%
     overflow-x: hidden
+    text-decoration: none
+
+body
+    font-family: $main-font !important
