--- a/templates/src/assets/sass/index.sass
+++ b/templates/src/assets/sass/index.sass
@@ -16,6 +16,7 @@ html
     max-width: 100%
     overflow-x: hidden
     text-decoration: none
+    scroll-behavior: smooth
 
 body
     font-family: $main-font !important
