--- a/templates/src/assets/sass/components/_header.sass
+++ b/templates/src/assets/sass/components/_header.sass
@@ -5,6 +5,13 @@ header
     position: sticky
     top: 0
     z-index: 1000
+
+a.nav-link.active
+    background-color: $background
+    color: black
+
+a.nav-link
+    height: 70px
     
 a
     color: $text-color
