--- a/templates/src/assets/sass/index.sass
+++ b/templates/src/assets/sass/index.sass
@@ -7,6 +7,7 @@
 @import 'components/home'
 @import 'components/about'
 @import 'components/nomination'
+@import 'components/make-request'
 
 #app
     background: $background
