формы и список номинаций

--- a/templates/src/assets/sass/index.sass
+++ b/templates/src/assets/sass/index.sass
@@ -7,7 +7,9 @@
 @import 'components/home'
 @import 'components/about'
 @import 'components/nomination'
+@import 'components/nominations'
 @import 'components/make-request'
+@import 'components/before-form'
 
 #app
     background: $background
