--- a/templates/src/assets/sass/index.sass
+++ b/templates/src/assets/sass/index.sass
@@ -10,6 +10,8 @@
 @import 'components/nominations'
 @import 'components/make-request'
 @import 'components/before-form'
+@import 'components/voting'
+@import 'components/gallery'
 
 #app
     background: $background
